# ai_doc_summ_translate

./: .gitignore  README.md  pyproject.toml  run.py
app/: __init__.py  main.py  migrate_db.py  migrate_db_add_use_ocr.py
app/api/: __init__.py  dependencies.py  routes.py  workspaces.py
app/core/: config.py  database.py
app/models/: __init__.py  task.py
app/services/: __init__.py  fine_translate.py  pdf_converter.py  summarize.py  task_processor.py  task_queue.py  translate.py  translate_simple_backup.py  workspace_service.py
app/utils/: __init__.py  ai_client.py  file_utils.py  logger.py  prompts.py
ui/: .electron-builder.yml  .gitignore  .npmrc  ELECTRON_EXAMPLES.md  OCR_FRONTEND_USAGE.md  README.md  README_ELECTRON.md  index.html  install_electron.bat  package.json  pnpm-lock.yaml  vite.config.js
ui/electron/: main.js  preload.js
ui/src/: App.vue
ui/src/api/: index.js
ui/src/assets/: main.css
ui/src/components/: LocalFileSelector.vue  MarkdownViewer.vue
ui/src/router/: index.js
ui/src/utils/: electron.js
ui/src/views/: FileDetailView.vue  FilesView.vue  HomeView.vue  TaskDetailView.vue  TaskQueueView.vue  WorkzoneDetailView.vue
